// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<MobileMenu /> should render 1`] = `
.c1 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c1 :hover,
.c1 :active,
.c1 :focus {
  text-decoration: underline;
}

.c2 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
  font-weight: 1000;
}

.c0 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: space-between;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c0 >.hamburger-react {
  margin-left: auto;
}

@media (min-width: 1200px) {
  .c0 {
    display: none;
  }
}

@media (min-width: 1200px) {

}

<div
  class="c0 "
>
  <a
    class="c1 c2"
    href="/"
    title="Lauri Lavanti"
  >
    Lauri Lavanti
  </a>
  <div
    aria-expanded="false"
    aria-label="Avaa valikko"
    class="hamburger-react"
    role="button"
    style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
    tabindex="0"
  >
    <div
      style="transition: 0.15s ease-in-out 0.15s; transform: none;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
      />
    </div>
    <div
      style="transition: 0.15s ease-in-out; opacity: 1;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
      />
    </div>
    <div
      style="transition: 0.15s ease-in-out 0.15s; transform: none;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
      />
    </div>
  </div>
</div>
`;

exports[`<MobileMenu /> should render with hidden title 1`] = `
.c0 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: space-between;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c0 >.hamburger-react {
  margin-left: auto;
}

@media (min-width: 1200px) {
  .c0 {
    display: none;
  }
}

@media (min-width: 1200px) {

}

<div
  class="c0 "
>
  <div
    aria-expanded="false"
    aria-label="Avaa valikko"
    class="hamburger-react"
    role="button"
    style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
    tabindex="0"
  >
    <div
      style="transition: 0.15s ease-in-out 0.15s; transform: none;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
      />
    </div>
    <div
      style="transition: 0.15s ease-in-out; opacity: 1;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
      />
    </div>
    <div
      style="transition: 0.15s ease-in-out 0.15s; transform: none;"
    >
      <div
        style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
      />
    </div>
  </div>
</div>
`;
